[project]
name = "plainhtml"
version = "0.2.2"
description = "Extract plain text from HTML"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Severin Simmler", email = "s.simmler@snapaddy.com" }]
dependencies = [
	"lxml[html_clean]==6.0.4",
]

[dependency-groups]
dev = [
	"ruff>=0.2.1",
	"pytest>=8.0.0",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"
